<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main">

    <TextView
        android:id="@+id/tvUserLogged"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="253dp"
        android:layout_marginBottom="673dp"
        android:text="@string/welcome"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="662dp"
        android:background="@color/design_default_color_on_secondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.09" />

    <TextView
        android:id="@+id/tvMssgexchangerate"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="58dp"
        android:layout_marginBottom="625dp"
        android:text="@string/mssgschangerate" />

    <TextView
        android:id="@+id/tvBuy"
        android:layout_width="83dp"
        android:layout_height="33dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="294dp"
        android:layout_marginBottom="573dp"
        android:text="@string/stringbuy" />

    <TextView
        android:id="@+id/tvSale"
        android:layout_width="78dp"
        android:layout_height="33dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="298dp"
        android:layout_marginBottom="525dp"
        android:text="@string/stringsale" />

    <TextView
        android:id="@+id/tvShowBuy"
        android:layout_width="86dp"
        android:layout_height="35dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="570dp"
        android:text="TextView" />

    <TextView
        android:id="@+id/tvShowSale"
        android:layout_width="88dp"
        android:layout_height="35dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="158dp"
        android:layout_marginBottom="525dp"
        android:text="TextView" />

    <View
        android:layout_width="340dp"
        android:layout_height="1dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="497dp"
        android:background="@color/design_default_color_on_secondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.09" />

    <TextView
        android:id="@+id/tvMssgeweather"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="44dp"
        android:layout_marginTop="243dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="461dp"
        android:text="@string/mssgweather" />

</RelativeLayout>